@@ -6,7 +6,7 @@ Group:		Applications/Productivity
 License:	GPLv2
 Source0:	fdk-aac-0.1.4.tar.gz
 Source1:        libmad-0.15.1b.tar.gz
-Source2:	webhost-0.8.2.tar.gz
+Source2:	webhost-0.8.3.tar.gz
 Source3:	glassplayer-0.6.1.tar.gz
 Source4:	%{name}-%{version}.tar.gz
 Patch:          libmad-0.15.1b-force-mem.patch.gz
@@ -39,7 +39,7 @@ automake --foreign
 autoconf
 %configure
 make
-cd ../webhost-0.8.2
+cd ../webhost-0.8.3
 %configure
 make
 cd ../glassplayer-0.6.1
@@ -56,7 +56,7 @@ cd fdk-aac-0.1.4
 make install DESTDIR=$RPM_BUILD_ROOT
 cd ../libmad-0.15.1b
 make install DESTDIR=$RPM_BUILD_ROOT
-cd ../webhost-0.8.2
+cd ../webhost-0.8.3
 make install DESTDIR=$RPM_BUILD_ROOT
 cd ../glassplayer-0.6.1
 make install DESTDIR=$RPM_BUILD_ROOT
